# aoc24

./: Cargo.toml  README.md
src/: lib.rs  main.rs
src/solutions/: day1.rs  mod.rs
