[package]
name = "aoc24"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
env_logger = "0.11.5"
indoc = "2.0.5"
log = "0.4.22"
owo-colors = { version = "4.1.0", features = ["supports-colors"] }
paste = "1.0.15"
pretty_assertions = "1.4.1"
